Alignment of grid correction

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,8 @@ h2 {
   margin: 0 auto;
   /*cursor: url('./assets/mallet.png'), pointer;*/
   margin-top: 50px;
-  padding-top: 100px;
+  padding-top: 10px;
+  padding-bottom: 450px;
 }
 
 .hole {
